subprojects/swen430/src/test/resources/tests/valid/DefiniteAssign_Valid_2.while
int foo(int x) {
    int y;
    switch (x) {
        case 2:
        case 3:
        default:
            return 5;
        case 4:
            y = x;
    }

    return y;
}

void main() {
    print(foo(5));
    print(foo(4));
}
