subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_5.while
int f(int x) {
    for(int i=y; i < x; i=i+1) {
        x = x + 1;
    }
    return x;
}
